--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,9 @@ numpy
 pandas
 pydeck
 streamlit
+langchain>=0.0.217
+openai
+duckduckgo-search
+anthropic>=0.3.0
+trubrics>=1.4.3
+streamlit-feedback
